Fixing small CSS alignment issues on lunches' comments

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -287,7 +287,7 @@ h5 {
 }
 
 .comment {
-  margin: 30px 0 0 92px;
+  margin: 20px 0 0 92px;
   width: auto;
 }
 
@@ -295,6 +295,10 @@ h5 {
   float: left;
   margin-right: 8px;
   max-width: 60px;
+}
+
+.comment .commentBody {
+	margin-left: 70px;
 }
 
 .applicants,
